Add new functionality: prioritize tasks and check if they overlap in execution time. Write some tests